<resources>
    <string name="app_name">WickedCalendar</string>
    <string name="left"><![CDATA[<-]]></string>
    <string name="right"><![CDATA[->]]></string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="place_holder">place_holder</string>
    <string name="checkbox">checkbox</string>
    <string name="add_new_event">Add new Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_event">New Event</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="delete_button">Delete button</string>
    <string name="select_time_frame">Select Time Frame</string>
</resources>